--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -520,8 +520,8 @@ fonts:
 sources:
     mapzen:
         type: MVT #TopoJSON
-        #url:  https://tile.nextzen.org/tilezen/vector/v1/512/all/{z}/{x}/{y}.mvt
-        url:  https://dev-tile.nextzen.org/tilezen/vector/v1/512/all/{z}/{x}/{y}.mvt
+        url:  https://tile.nextzen.org/tilezen/vector/v1/512/all/{z}/{x}/{y}.mvt
+        #url:  https://dev-tile.nextzen.org/tilezen/vector/v1/512/all/{z}/{x}/{y}.mvt
         #url: http://localhost:8050/tilezen/vector/v1/512/all/{z}/{x}/{y}.mvt?api_key=&
         #url: https://t651c12le3.execute-api.us-east-2.amazonaws.com/staging/tilezen/vector/v1/512/all/{z}/{x}/{y}.mvt
         #url: https://d3gy1yxv8mxm7h.cloudfront.net/tilezen/vector/v1/512/all/{z}/{x}/{y}.mvt
